@@ -26,6 +26,13 @@ kotlin {
   }
 }
 
+tasks.withType<Test> {
+  jvmArgs(
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+  )
+}
+
 dependencies {
   kotlinCompilerPluginClasspath(Deps.Compose.compiler)
 }
